Corrected npm main script path.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A driver for the Savant LiteTouch lighting control Real Time Control protocol",
   "author": "Alex Wolfe <alexkwolfe@gmail.com>",
   "version": "1.0.0",
-  "main": "lib/node-litetouch.js",
+  "main": "./index.js",
   "licenses": [
     {
       "type": "MIT",
