Moved coffee, chai, and mocha into devDependencies, where they belong.

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "prepublish": "cake build"
   },
   "dependencies": {
-    "split": "^0.3.0",
+    "split": "^0.3.0"
+  },
+  "devDependencies": {
     "coffee-script": "^1.8.0",
     "mocha": "^1.21.4",
     "chai": "^1.9.1"
-  },
-  "devDependencies": {}
+  }
 }
